--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/styles/css/styles.css">
+    <title>DemoGitHub</title>
+</head>
+<body>
+    <header>
 
+    </header>
+    <main>
+        
+    </main>
+    <footer>
+
+    </footer>
+    <script src="assets/js/index.js"></script>
+</body>
+</html>
