--- a/index.html
+++ b/index.html
@@ -12,7 +12,23 @@
 
     </header>
     <main>
+        <svg xmlns="http://www.w3.org/2000/svg" width="500" height="500"></svg>
+
+        <rect x="50" y="140" width="30" height="30" fill="red" />
+
+        <rect x="50" y="110" width="30" height="30" fill="orange"/>
+
+        <rect x="50" y="70" width="30" height="30" fill="yellow"/>
         
+        <rect x="50" y="40" width="30" height="30" fill="green"/>
+        
+        <rect x="50" y="10" width="30" height="30" fill="blue"/>
+
+        <rect x="50" y="-20" width="30" height="30" fill="purple"/>
+
+        <rect x="50" y="-50" width="30" height="30" fill="pink"/>
+
+        </svg>
     </main>
     <footer>
 
