--- a/index.html
+++ b/index.html
@@ -12,23 +12,25 @@
 
     </header>
     <main>
-        <svg xmlns="http://www.w3.org/2000/svg" width="500" height="500"></svg>
+        <div id="svg" >
+        <svg xmlns="http://www.w3.org/2000/svg" width="500" height="500" >
 
-        <rect x="50" y="140" width="30" height="30" fill="red" />
+        <rect x="190" y="50" width="30" height="30" fill="red" />
 
-        <rect x="50" y="110" width="30" height="30" fill="orange"/>
+        <rect x="160" y="50" width="30" height="30" fill="orange"/>
 
-        <rect x="50" y="70" width="30" height="30" fill="yellow"/>
+        <rect x="130" y="50" width="30" height="30" fill="yellow"/>
         
-        <rect x="50" y="40" width="30" height="30" fill="green"/>
+        <rect x="100" y="50" width="30" height="30" fill="green"/>
         
-        <rect x="50" y="10" width="30" height="30" fill="blue"/>
+        <rect x="70" y="50" width="30" height="30" fill="blue"/>
 
-        <rect x="50" y="-20" width="30" height="30" fill="purple"/>
+        <rect x="40" y="50" width="30" height="30" fill="purple"/>
 
-        <rect x="50" y="-50" width="30" height="30" fill="pink"/>
+        <rect x="10" y="50" width="30" height="30" fill="indigo"/>
 
         </svg>
+        </div>
     </main>
     <footer>
 
